@@ -50,6 +50,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
         Tru64 Unix}, SINIX and Ultrix.
       Fix compiling on GNU/Hurd.
       Make illumos build warning-free.
+      Fix propagation of cc_werr_cflags() output.
 
 DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
   Summary for 4.99.5 tcpdump release (so far!)
